# docs

./: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  source.config.ts  turbo.json
content/networks/: index.mdx  meta.json
content/services/: endpoints.mdx  explorer.mdx  frontend.mdx  meta.json  restake.mdx
content/spectra-portal/: index.mdx
docs/: package.json  theme.config.tsx  tsconfig.json
docs/pages/: _meta.json  mainnet.mdx  testnet.mdx
files/atomone/: addrbook.json
files/babylon-testnet/: addrbook.json  genesis.json
files/blit/: addrbook.json  genesis.json
files/blit-testnet/: addrbook.json  genesis.json
files/composable/: addrbook.json
files/composable-testnet/: addrbook.json  genesis.json
files/dyson-protocol/: addrbook.json
files/initia/: addrbook.json  genesis.json
files/juno/: addrbook.json
files/juno-testnet/: addrbook.json
files/nibiru/: addrbook.json  genesis.json
files/picasso/: addrbook.json  genesis.json
files/prysm-testnet/: addrbook.json  (+1 more)
mdx_gen/: JINJA2_MDX_GUIDE.md  QUICK_START.md  README.md  example_output.mdx  example_usage.py  main.py  pyproject.toml  test_templates.py
mdx_gen/data/: mainnets.yml  testnets.yml
mdx_gen/src/: context.py  main_operator.py
mdx_gen/src/config_loader/: __init__.py  loader.py  loader_test.py
mdx_gen/src/query_endpoints/: __init__.py  query_rest.py
mdx_gen/templates/networks/: gnoland_network_index.j2  gnoland_node_setup.j2  gnoland_validator_setup.j2  main_index.j2  network_index.j2  node_commands.j2  node_setup.j2  validator_setup.j2
src/: mdx-components.tsx
(+136 files in other folders)
